# ple

./: .gitignore  CMakeLists.txt  README.md
.githooks/: commit-msg
dop/: rules_build.md  rules_main.md  rules_release.md
ple/: App.swift  ContentView.swift
ple.xcodeproj/: project.pbxproj
ple.xcodeproj/xcshareddata/xcschemes/: ple.xcscheme
releases/V01.00/: readme.md
resources/: about.md
source/: Main.cpp  MainComponent.cpp  MainComponent.h
source/app/: AppUi.cpp  Application.cpp  Lifecycle.cpp  LockScreenController.h  LockScreenController.mm  MainComponent.cpp  MainComponent.h  Playback.cpp  PleApplication.cpp
source/audio/: AudioFiles.cpp  AudioFiles.h  PlaybackController.h  PlaybackController.mm
source/browser/: AudioBrowserController.cpp  AudioBrowserController.h
source/headers/: App.h  Browser.h  Panel.h  Paths.h  Playback.h  PluginHost.h  Popups.h
source/helpers/: Browser.cpp  Paths.cpp  Playback.mm  PluginHost.mm
source/plugins/: AudioUnitPluginHost.h  AudioUnitPluginHost.mm
source/ui/: LookAndFeel.cpp  MainView.cpp  MainView.h  Panel.cpp  PleLookAndFeel.cpp  PleLookAndFeel.h  PopupViews.cpp  PopupViews.h  Popups.cpp
